Co-work : fin HTML

--- a/caminar/index.html
+++ b/caminar/index.html
@@ -7,6 +7,81 @@
     <title>Document</title>
 </head>
 <body>
+
+<!-- titre general -->
+
+    <header>
+        <h1>Caminar</h1>
+        <p>Lorem, ipsum.</p>
+    </header>
+
+<!-- 1e section : photo + titre (fond blanc) + texte (fond gris) -->
+
+    <section class="first">
+        <div class="first_image">
+            <img src="./images/pic02.jpg" alt="">
+        </div>
+        <div class="first_title">
+            <h2>Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit.</p>
+        </div>
+        <div class="first_text">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero quia culpa voluptate aut dolor incidunt?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum quidem consequatur sit dolore suscipit beatae enim fugit molestiae saepe quisquam quis consequuntur tenetur mollitia nemo explicabo exercitationem ullam voluptates nesciunt voluptatem, facere iure quasi?</p>
+        </div>
+    </section>
+
+<!-- 2e section : titre (fond noir) + photos (4) -->
+
+    <section class="second">
+        <div class="second_title">
+            <h2>lorem2</h2>
+        </div>
+        <div class="second_image1">
+            <img src="./images/pic03.jpg" alt="">
+            <img src="./images/pic01.jpg" alt="">
+        </div>
+        <div class="seoncd_image2">
+            <img src="./images/pic04.jpg" alt="">
+            <img src="./images/pic05.jpg" alt="">
+        </div>
+    </section>
+
+<!-- 3e section : alternance photos/textes -->
+
+    <section class="third">
+        <div class="third_imagetexte1">
+            <img src="./images/pic06.jpg" alt="">
+            <h2>Lorem, ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cum vel eos sed rerum, provident obcaecati laudantium voluptatem numquam magni.</p>
+        </div>
+        <div class="third_imagetexte2">
+            <img src="./images/pic07.jpg" alt="">
+            <h2>Lorem, ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit exercitationem, doloribus sunt voluptate sapiente provident.</p>
+        </div>
+        <div class="third_imagetexte3">
+            <img src="./images/pic08.jpg" alt="">
+            <h2>Lorem, ipsum.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque debitis harum laboriosam ex quia in. Minus, rem?</p>
+        </div>
+    </section>
+
+<!-- footer : icones + texte -->
+
+    <footer>
+        <div class="footer_icones">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, neque.</p>
+        </div>
+    </footer>
     
 </body>
 </html>
