--- a/caminar/index.html
+++ b/caminar/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link -->
+    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
     <title>Document</title>
 </head>
+
 <body>
 
-<!-- titre general -->
+    <!-- titre general -->
 
     <header>
         <h1>Caminar</h1>
         <p>Lorem, ipsum.</p>
     </header>
 
-<!-- 1e section : photo + titre (fond blanc) + texte (fond gris) -->
+    <!-- 1e section : photo + titre (fond blanc) + texte (fond gris) -->
 
     <section class="first">
         <div class="first_image">
@@ -25,13 +32,21 @@
             <h2>Lorem, ipsum dolor.</h2>
             <p>Lorem ipsum dolor sit.</p>
         </div>
-        <div class="first_text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero quia culpa voluptate aut dolor incidunt?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum quidem consequatur sit dolore suscipit beatae enim fugit molestiae saepe quisquam quis consequuntur tenetur mollitia nemo explicabo exercitationem ullam voluptates nesciunt voluptatem, facere iure quasi?</p>
-        </div>
     </section>
+    <div class="first_text">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero quia culpa voluptate aut dolor incidunt?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum eligendi dolores temporibus! Sapiente
+            expedita hic aliquam. Doloribus inventore est voluptate beatae accusamus esse illum corporis quas modi.
+            Totam, praesentium corrupti.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum quidem consequatur sit dolore
+            suscipit beatae enim fugit molestiae saepe quisquam quis consequuntur tenetur mollitia nemo explicabo
+            exercitationem ullam voluptates nesciunt voluptatem, facere iure quasi?Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Officia vitae, excepturi id laborum repellat itaque consequuntur commodi
+            molestiae nemo in, magnam provident quaerat sapiente placeat ratione ullam assumenda omnis. Voluptates?</p>
+    </div>
 
-<!-- 2e section : titre (fond noir) + photos (4) -->
+    <!-- 2e section : titre (fond noir) + photos (4) -->
 
     <section class="second">
         <div class="second_title">
@@ -47,41 +62,45 @@
         </div>
     </section>
 
-<!-- 3e section : alternance photos/textes -->
+    <!-- 3e section : alternance photos/textes -->
 
     <section class="third">
         <div class="third_imagetexte1">
             <img src="./images/pic06.jpg" alt="">
             <h2>Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cum vel eos sed rerum, provident obcaecati laudantium voluptatem numquam magni.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cum vel eos sed rerum, provident obcaecati
+                laudantium voluptatem numquam magni.</p>
         </div>
         <div class="third_imagetexte2">
-            <img src="./images/pic07.jpg" alt="">
             <h2>Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit exercitationem, doloribus sunt voluptate sapiente provident.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit exercitationem, doloribus sunt voluptate
+                sapiente provident.</p>
+            <img src="./images/pic07.jpg" alt="">
         </div>
         <div class="third_imagetexte3">
             <img src="./images/pic08.jpg" alt="">
             <h2>Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque debitis harum laboriosam ex quia in. Minus, rem?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque debitis harum laboriosam ex quia in.
+                Minus, rem?</p>
         </div>
     </section>
 
-<!-- footer : icones + texte -->
+    <!-- footer : icones + texte -->
 
     <footer>
         <div class="footer_icones">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="far fa-envelope"></i>
+
         </div>
-        <div>
+        <div id="ak47">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, neque.</p>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
